--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -15,7 +15,7 @@
       </p>
     </div>
     <div class="about-image">
-      <img src="/images/dev.jpg" alt="Rinta Luther - Software Engineer">
+      <img src="/images/about.png" alt="Rinta Luther - Software Engineer">
     </div>
  
   <div class="cv-container">
