--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,16 +1,18 @@
 <section class="contact">
-    <h2>Contact Me</h2>
-    <form>
-      <mat-form-field>
-        <input matInput placeholder="Name">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Email">
-      </mat-form-field>
-      <mat-form-field>
-        <textarea matInput placeholder="Message"></textarea>
-      </mat-form-field>
-      <button mat-raised-button color="primary">Send</button>
-    </form>
-  </section>
-  
+  <h2 class="contact-title">Contact Me</h2>
+  <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)" class="contact-form">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input id="name" name="name" ngModel required type="text" placeholder="Your Name">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" name="email" ngModel required type="email" placeholder="Your Email">
+    </div>
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea id="message" name="message" ngModel required placeholder="Your Message"></textarea>
+    </div>
+    <button type="submit" class="submit-btn">Send</button>
+  </form>
+</section>
