--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,11 +3,11 @@
   <form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)" class="contact-form">
     <div class="form-group">
       <label for="name">Name</label>
-      <input id="name" name="name" ngModel required type="text" placeholder="Your Name">
+      <input id="name" name="name" ngModel required type="text" placeholder="Your Name" />
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" name="email" ngModel required type="email" placeholder="Your Email">
+      <input id="email" name="email" ngModel required type="email" placeholder="Your Email" />
     </div>
     <div class="form-group">
       <label for="message">Message</label>
